package proto;

option java_package = "bio.pih.genoogle.io.proto";
option java_outer_classname = "Io";
option optimize_for = SPEED;

/////////////////////////////////////////////////////////////////////
// Inverted Index Stuffs
/////////////////////////////////////////////////////////////////////

message InvertedIndexBuck {
	repeated int64 buck = 1;
}

/////////////////////////////////////////////////////////////////////
// Databank Stuffs
/////////////////////////////////////////////////////////////////////

message StoredDatabank {
  enum SequenceType {
  	DNA = 0;
  	RNA = 1;
  	PROTEIN = 2;
  }
  
  required SequenceType type = 1;
  required int32 qtdSequences = 2;
  required int64 qtdBases = 3;
  repeated StoredSequenceInfo sequencesInfo = 4;  
}

message StoredSequenceInfo {
	required int32 id = 1;
	required int64 offset = 2;
	required int32 length = 3;
}		
					
message StoredSequence {  
  required int32 id = 1;
  required string type = 2;
  required string gi = 3;
  required string name = 4;
  required string accession = 5;
  required string description = 6;
  required bytes encodedSequence = 7;
}


/////////////////////////////////////////////////////////////////////
// Similar SubSequences stuffs
/////////////////////////////////////////////////////////////////////
message StoredSimilarSubSequencesIndex {
	// TODO: put params here
	repeated StoredComparationResultInfo storedComparationResultInfos = 1;
} 

message StoredComparationResultInfo {
	required int32 encodedSubSequence = 1;
	required int32 length = 3;
	required int64 offset = 2;
}

message StoredSimilarSubSequences {
	required int32 encodedSequence = 1;
	repeated int32 similarSequence = 2;
}
